# neomist

./: .gitignore  Cargo.toml  README.md  build.rs  skills-lock.json  test_axum.rs  test_helios.rs  verified-fetch-plan.md
.github/workflows/: linux-packages.yml  tag-from-cargo.yml
apps.neomist.eth/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml
apps.neomist.eth/sql/: schema.sql
apps.neomist.eth/src/: cli.mjs  config.mjs  contenthash.mjs  db.mjs  ensnode.mjs  export-ipfs-tree.mjs  filters.mjs  probe.mjs  sync-names.mjs
packaging/arch/: PKGBUILD  README.md
packaging/linux/: README.md  eth.neomist.app.desktop  eth.neomist.app.metainfo.xml
packaging/macos/: Info.plist.template  README.md  pkg-postinstall.template  pkg-preinstall.template  product-distribution.xml.template
packaging/macos/installer-resources/English.lproj/: conclusion.html.template  welcome.html.template
scripts/: build-appimage.sh  build-arch.sh  build-deb.sh  build-macos-app.sh  build-macos-pkg.sh  load-dotenv.sh  notarize-macos-pkg.sh
src/: app_setup.rs  cache.rs  certs.rs  checkpoints.rs  config.rs  constants.rs  dns.rs  dns_server.rs  ens.rs  following.rs  gas.rs  http_server.rs  ipfs.rs  main.rs  rpc_proxy.rs  site_error.rs  state.rs  tray.rs  web3.rs
ui/: cache.html  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
ui/src/: App.jsx  index.css  main.jsx
